`Transaction silently rolled back because it has been marked as rollback-only`, `A different object with the same identifier value was already associated with the session` 에러로 중단

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,10 +9,14 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-    properties:
-      hibernate:
-        format_sql: true
-
+    open-in-view: false
+#    properties:
+#      hibernate:
+#        format_sql: true
+#
 logging:
   level:
-    org.hibernate.SQL: debug
+    org.spingframework.jdbc.core:
+      JdbcTemplate: debug
+      StatementCreatorUtils: trace
+#    org.hibernate.SQL: debug
